package ir.kghobad.thesis_defense_time_schedular.model.entity;

import jakarta.persistence.Entity;

@Entity
public class BachelorThesisForm extends ThesisForm {
}
