package ir.kghobad.thesis_defense_time_schedular.model.entity;

public class MasterThesisForm {
}
