
    create table admin (
        id bigint not null,
        primary key (id)
    );

    create table bachelor_student (
        id bigint not null,
        primary key (id)
    );

    create table defensemeeting_professor_association (
        score float(53),
        defense_meeting_id bigint not null,
        id bigint generated by default as identity,
        professor_id bigint not null,
        primary key (id),
        constraint uk_defense_meeting_id_professor_id unique (defense_meeting_id, professor_id)
    );

    create table department (
        id bigint generated by default as identity,
        name varchar(255) not null unique,
        primary key (id)
    );

    create table field (
        active boolean not null,
        department_id bigint,
        id bigint generated by default as identity,
        name varchar(255) not null,
        primary key (id)
    );

    create table master_student (
        id bigint not null,
        primary key (id)
    );

    create table phd_student (
        id bigint not null,
        primary key (id)
    );

    create table professor (
        is_manager boolean,
        id bigint not null,
        primary key (id)
    );

    create table student (
        graduation_date timestamp(6),
        id bigint not null,
        instructor_id bigint,
        student_number bigint not null unique,
        primary key (id)
    );

    create table thesis_defense_meeting (
        score float(53),
        id bigint generated by default as identity,
        selected_time_slot_id bigint unique,
        submission_date timestamp(6),
        thesis_form_id bigint not null unique,
        update_date timestamp(6),
        location varchar(255),
        state varchar(255) not null check (state in ('JURIES_SELECTED','JURIES_SPECIFIED_TIME','STUDENT_SPECIFIED_TIME','SCHEDULED','COMPLETED','CANCELED')),
        primary key (id)
    );

    create table thesis_form (
        admin_reviewed_at timestamp(6),
        field_id bigint,
        id bigint generated by default as identity,
        instructor_id bigint not null,
        instructor_reviewed_at timestamp(6),
        manager_reviewed_at timestamp(6),
        revision_requested_at timestamp(6),
        student_id bigint not null,
        submission_date timestamp(6),
        update_date timestamp(6),
        revision_message varchar(1000),
        abstract_text varchar(255),
        rejection_reason varchar(255),
        state varchar(255) not null check (state in ('SUBMITTED','INSTRUCTOR_APPROVED','INSTRUCTOR_REJECTED','INSTRUCTOR_REVISION_REQUESTED','ADMIN_APPROVED','ADMIN_REJECTED','ADMIN_REVISION_REQUESTED_FOR_STUDENT','ADMIN_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_APPROVED','MANAGER_REJECTED','MANAGER_REVISION_REQUESTED_FOR_STUDENT','MANAGER_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_REVISION_REQUESTED_FOR_ADMIN')),
        student_type varchar(255) check (student_type in ('BACHELOR','MASTER','PHD')),
        title varchar(255),
        primary key (id)
    );

    create table time_slot (
        date date not null,
        defense_meeting_id bigint,
        id bigint generated by default as identity,
        time_period varchar(255) not null check (time_period in ('PERIOD_7_30_9_00','PERIOD_9_00_10_30','PERIOD_10_30_12_00','PERIOD_13_30_15_00','PERIOD_15_30_17_00')),
        primary key (id),
        constraint uk_timeslot_date_period_meeting unique (date, time_period, defense_meeting_id)
    );

    create table timeslot_professor_association (
        id bigint generated by default as identity,
        professor_id bigint not null,
        timeslot_id bigint not null,
        primary key (id)
    );

    create table users (
        enabled boolean,
        creation_date timestamp(6) not null,
        department_id bigint,
        field_id bigint,
        id bigint generated by default as identity,
        email varchar(255) not null unique,
        first_name varchar(255) not null,
        last_name varchar(255) not null,
        password varchar(255) not null,
        phone_number varchar(255) not null unique,
        primary key (id)
    );

    create index idx_timeslot_date_period_meeting 
       on time_slot (defense_meeting_id, date, time_period);

    alter table if exists admin 
       add constraint FKqer4e53tfnl17s22ior7fcsv8 
       foreign key (id) 
       references users;

    alter table if exists bachelor_student 
       add constraint FK1i6ctx3du7dncayp7isl4vdbi 
       foreign key (id) 
       references student;

    alter table if exists defensemeeting_professor_association 
       add constraint FKeelrca6xpvedveu08crl0ilu4 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists defensemeeting_professor_association 
       add constraint FK7xqodopyhrndt0xk41d3pxosl 
       foreign key (professor_id) 
       references professor;

    alter table if exists field 
       add constraint FK7sek1bdc701h6powdjqnnvbvd 
       foreign key (department_id) 
       references department;

    alter table if exists master_student 
       add constraint FK2u7h2o44f3nvxkh77admi3h22 
       foreign key (id) 
       references student;

    alter table if exists phd_student 
       add constraint FK63yiky0ud8vaco0e20ohn7idb 
       foreign key (id) 
       references student;

    alter table if exists professor 
       add constraint FK3d3bqgq0xxp7nbeclk2a6vthc 
       foreign key (id) 
       references users;

    alter table if exists student 
       add constraint FK3nuk9gvmkgj7t8ciwy6s0k2ej 
       foreign key (instructor_id) 
       references professor;

    alter table if exists student 
       add constraint FK3w7xmt19i6a0cr7kp8c80ek40 
       foreign key (id) 
       references users;

    alter table if exists thesis_defense_meeting 
       add constraint FKim4ug0mjvvpsl5wb5va4btmh5 
       foreign key (selected_time_slot_id) 
       references time_slot;

    alter table if exists thesis_defense_meeting 
       add constraint FK28qy5y9y0auk0cr28lu59mdxu 
       foreign key (thesis_form_id) 
       references thesis_form;

    alter table if exists thesis_form 
       add constraint FK3yh8fnw21wa1oa8bc51w92u6p 
       foreign key (field_id) 
       references field;

    alter table if exists thesis_form 
       add constraint FKnsc9jk815emabltlu7orshjon 
       foreign key (instructor_id) 
       references professor;

    alter table if exists thesis_form 
       add constraint FKkhi6b10pjdntom85jx1rrj5dh 
       foreign key (student_id) 
       references student;

    alter table if exists time_slot 
       add constraint FKb8l4g6svsnj8dlb0kmsinu82y 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists timeslot_professor_association 
       add constraint FKg8cr9fw2a8u49uu8c62rv2dx2 
       foreign key (professor_id) 
       references professor;

    alter table if exists timeslot_professor_association 
       add constraint FKs55v7etyegl5w8q9egqr97ju9 
       foreign key (timeslot_id) 
       references time_slot;

    alter table if exists users 
       add constraint FKfi832e3qv89fq376fuh8920y4 
       foreign key (department_id) 
       references department;

    alter table if exists users 
       add constraint FK2b4ciyset4wra151rt98fte2b 
       foreign key (field_id) 
       references field;

    create table admin (
        id bigint not null,
        primary key (id)
    );

    create table bachelor_student (
        id bigint not null,
        primary key (id)
    );

    create table defensemeeting_professor_association (
        score float(53),
        defense_meeting_id bigint not null,
        id bigint generated by default as identity,
        professor_id bigint not null,
        primary key (id),
        constraint uk_defense_meeting_id_professor_id unique (defense_meeting_id, professor_id)
    );

    create table department (
        id bigint generated by default as identity,
        name varchar(255) not null unique,
        primary key (id)
    );

    create table field (
        active boolean not null,
        department_id bigint,
        id bigint generated by default as identity,
        name varchar(255) not null,
        primary key (id)
    );

    create table master_student (
        id bigint not null,
        primary key (id)
    );

    create table phd_student (
        id bigint not null,
        primary key (id)
    );

    create table professor (
        is_manager boolean,
        id bigint not null,
        primary key (id)
    );

    create table student (
        graduation_date timestamp(6),
        id bigint not null,
        instructor_id bigint,
        student_number bigint not null unique,
        primary key (id)
    );

    create table thesis_defense_meeting (
        score float(53),
        id bigint generated by default as identity,
        selected_time_slot_id bigint unique,
        submission_date timestamp(6),
        thesis_form_id bigint not null unique,
        update_date timestamp(6),
        location varchar(255),
        state varchar(255) not null check (state in ('JURIES_SELECTED','JURIES_SPECIFIED_TIME','STUDENT_SPECIFIED_TIME','SCHEDULED','COMPLETED','CANCELED')),
        primary key (id)
    );

    create table thesis_form (
        admin_reviewed_at timestamp(6),
        field_id bigint,
        id bigint generated by default as identity,
        instructor_id bigint not null,
        instructor_reviewed_at timestamp(6),
        manager_reviewed_at timestamp(6),
        revision_requested_at timestamp(6),
        student_id bigint not null,
        submission_date timestamp(6),
        update_date timestamp(6),
        revision_message varchar(1000),
        abstract_text varchar(255),
        rejection_reason varchar(255),
        state varchar(255) not null check (state in ('SUBMITTED','INSTRUCTOR_APPROVED','INSTRUCTOR_REJECTED','INSTRUCTOR_REVISION_REQUESTED','ADMIN_APPROVED','ADMIN_REJECTED','ADMIN_REVISION_REQUESTED_FOR_STUDENT','ADMIN_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_APPROVED','MANAGER_REJECTED','MANAGER_REVISION_REQUESTED_FOR_STUDENT','MANAGER_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_REVISION_REQUESTED_FOR_ADMIN')),
        student_type varchar(255) check (student_type in ('BACHELOR','MASTER','PHD')),
        title varchar(255),
        primary key (id)
    );

    create table time_slot (
        date date not null,
        defense_meeting_id bigint,
        id bigint generated by default as identity,
        time_period varchar(255) not null check (time_period in ('PERIOD_7_30_9_00','PERIOD_9_00_10_30','PERIOD_10_30_12_00','PERIOD_13_30_15_00','PERIOD_15_30_17_00')),
        primary key (id),
        constraint uk_timeslot_date_period_meeting unique (date, time_period, defense_meeting_id)
    );

    create table timeslot_professor_association (
        id bigint generated by default as identity,
        professor_id bigint not null,
        timeslot_id bigint not null,
        primary key (id)
    );

    create table users (
        enabled boolean,
        creation_date timestamp(6) not null,
        department_id bigint,
        field_id bigint,
        id bigint generated by default as identity,
        email varchar(255) not null unique,
        first_name varchar(255) not null,
        last_name varchar(255) not null,
        password varchar(255) not null,
        phone_number varchar(255) not null unique,
        primary key (id)
    );

    create index idx_timeslot_date_period_meeting 
       on time_slot (defense_meeting_id, date, time_period);

    alter table if exists admin 
       add constraint FKqer4e53tfnl17s22ior7fcsv8 
       foreign key (id) 
       references users;

    alter table if exists bachelor_student 
       add constraint FK1i6ctx3du7dncayp7isl4vdbi 
       foreign key (id) 
       references student;

    alter table if exists defensemeeting_professor_association 
       add constraint FKeelrca6xpvedveu08crl0ilu4 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists defensemeeting_professor_association 
       add constraint FK7xqodopyhrndt0xk41d3pxosl 
       foreign key (professor_id) 
       references professor;

    alter table if exists field 
       add constraint FK7sek1bdc701h6powdjqnnvbvd 
       foreign key (department_id) 
       references department;

    alter table if exists master_student 
       add constraint FK2u7h2o44f3nvxkh77admi3h22 
       foreign key (id) 
       references student;

    alter table if exists phd_student 
       add constraint FK63yiky0ud8vaco0e20ohn7idb 
       foreign key (id) 
       references student;

    alter table if exists professor 
       add constraint FK3d3bqgq0xxp7nbeclk2a6vthc 
       foreign key (id) 
       references users;

    alter table if exists student 
       add constraint FK3nuk9gvmkgj7t8ciwy6s0k2ej 
       foreign key (instructor_id) 
       references professor;

    alter table if exists student 
       add constraint FK3w7xmt19i6a0cr7kp8c80ek40 
       foreign key (id) 
       references users;

    alter table if exists thesis_defense_meeting 
       add constraint FKim4ug0mjvvpsl5wb5va4btmh5 
       foreign key (selected_time_slot_id) 
       references time_slot;

    alter table if exists thesis_defense_meeting 
       add constraint FK28qy5y9y0auk0cr28lu59mdxu 
       foreign key (thesis_form_id) 
       references thesis_form;

    alter table if exists thesis_form 
       add constraint FK3yh8fnw21wa1oa8bc51w92u6p 
       foreign key (field_id) 
       references field;

    alter table if exists thesis_form 
       add constraint FKnsc9jk815emabltlu7orshjon 
       foreign key (instructor_id) 
       references professor;

    alter table if exists thesis_form 
       add constraint FKkhi6b10pjdntom85jx1rrj5dh 
       foreign key (student_id) 
       references student;

    alter table if exists time_slot 
       add constraint FKb8l4g6svsnj8dlb0kmsinu82y 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists timeslot_professor_association 
       add constraint FKg8cr9fw2a8u49uu8c62rv2dx2 
       foreign key (professor_id) 
       references professor;

    alter table if exists timeslot_professor_association 
       add constraint FKs55v7etyegl5w8q9egqr97ju9 
       foreign key (timeslot_id) 
       references time_slot;

    alter table if exists users 
       add constraint FKfi832e3qv89fq376fuh8920y4 
       foreign key (department_id) 
       references department;

    alter table if exists users 
       add constraint FK2b4ciyset4wra151rt98fte2b 
       foreign key (field_id) 
       references field;

    create table admin (
        id bigint not null,
        primary key (id)
    );

    create table bachelor_student (
        id bigint not null,
        primary key (id)
    );

    create table defensemeeting_professor_association (
        score float(53),
        defense_meeting_id bigint not null,
        id bigint generated by default as identity,
        professor_id bigint not null,
        primary key (id),
        constraint uk_defense_meeting_id_professor_id unique (defense_meeting_id, professor_id)
    );

    create table department (
        id bigint generated by default as identity,
        name varchar(255) not null unique,
        primary key (id)
    );

    create table field (
        active boolean not null,
        department_id bigint,
        id bigint generated by default as identity,
        name varchar(255) not null,
        primary key (id)
    );

    create table master_student (
        id bigint not null,
        primary key (id)
    );

    create table phd_student (
        id bigint not null,
        primary key (id)
    );

    create table professor (
        is_manager boolean,
        id bigint not null,
        primary key (id)
    );

    create table student (
        graduation_date timestamp(6),
        id bigint not null,
        instructor_id bigint,
        student_number bigint not null unique,
        primary key (id)
    );

    create table thesis_defense_meeting (
        score float(53),
        id bigint generated by default as identity,
        selected_time_slot_id bigint unique,
        submission_date timestamp(6),
        thesis_form_id bigint not null unique,
        update_date timestamp(6),
        location varchar(255),
        state varchar(255) not null check (state in ('JURIES_SELECTED','JURIES_SPECIFIED_TIME','STUDENT_SPECIFIED_TIME','SCHEDULED','COMPLETED','CANCELED')),
        primary key (id)
    );

    create table thesis_form (
        admin_reviewed_at timestamp(6),
        field_id bigint,
        id bigint generated by default as identity,
        instructor_id bigint not null,
        instructor_reviewed_at timestamp(6),
        manager_reviewed_at timestamp(6),
        revision_requested_at timestamp(6),
        student_id bigint not null,
        submission_date timestamp(6),
        update_date timestamp(6),
        revision_message varchar(1000),
        abstract_text varchar(255),
        rejection_reason varchar(255),
        state varchar(255) not null check (state in ('SUBMITTED','INSTRUCTOR_APPROVED','INSTRUCTOR_REJECTED','INSTRUCTOR_REVISION_REQUESTED','ADMIN_APPROVED','ADMIN_REJECTED','ADMIN_REVISION_REQUESTED_FOR_STUDENT','ADMIN_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_APPROVED','MANAGER_REJECTED','MANAGER_REVISION_REQUESTED_FOR_STUDENT','MANAGER_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_REVISION_REQUESTED_FOR_ADMIN')),
        student_type varchar(255) check (student_type in ('BACHELOR','MASTER','PHD')),
        title varchar(255),
        primary key (id)
    );

    create table time_slot (
        date date not null,
        defense_meeting_id bigint,
        id bigint generated by default as identity,
        time_period varchar(255) not null check (time_period in ('PERIOD_7_30_9_00','PERIOD_9_00_10_30','PERIOD_10_30_12_00','PERIOD_13_30_15_00','PERIOD_15_30_17_00')),
        primary key (id),
        constraint uk_timeslot_date_period_meeting unique (date, time_period, defense_meeting_id)
    );

    create table timeslot_professor_association (
        id bigint generated by default as identity,
        professor_id bigint not null,
        timeslot_id bigint not null,
        primary key (id)
    );

    create table users (
        enabled boolean,
        creation_date timestamp(6) not null,
        department_id bigint,
        field_id bigint,
        id bigint generated by default as identity,
        email varchar(255) not null unique,
        first_name varchar(255) not null,
        last_name varchar(255) not null,
        password varchar(255) not null,
        phone_number varchar(255) not null unique,
        primary key (id)
    );

    create index idx_timeslot_date_period_meeting 
       on time_slot (defense_meeting_id, date, time_period);

    alter table if exists admin 
       add constraint FKqer4e53tfnl17s22ior7fcsv8 
       foreign key (id) 
       references users;

    alter table if exists bachelor_student 
       add constraint FK1i6ctx3du7dncayp7isl4vdbi 
       foreign key (id) 
       references student;

    alter table if exists defensemeeting_professor_association 
       add constraint FKeelrca6xpvedveu08crl0ilu4 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists defensemeeting_professor_association 
       add constraint FK7xqodopyhrndt0xk41d3pxosl 
       foreign key (professor_id) 
       references professor;

    alter table if exists field 
       add constraint FK7sek1bdc701h6powdjqnnvbvd 
       foreign key (department_id) 
       references department;

    alter table if exists master_student 
       add constraint FK2u7h2o44f3nvxkh77admi3h22 
       foreign key (id) 
       references student;

    alter table if exists phd_student 
       add constraint FK63yiky0ud8vaco0e20ohn7idb 
       foreign key (id) 
       references student;

    alter table if exists professor 
       add constraint FK3d3bqgq0xxp7nbeclk2a6vthc 
       foreign key (id) 
       references users;

    alter table if exists student 
       add constraint FK3nuk9gvmkgj7t8ciwy6s0k2ej 
       foreign key (instructor_id) 
       references professor;

    alter table if exists student 
       add constraint FK3w7xmt19i6a0cr7kp8c80ek40 
       foreign key (id) 
       references users;

    alter table if exists thesis_defense_meeting 
       add constraint FKim4ug0mjvvpsl5wb5va4btmh5 
       foreign key (selected_time_slot_id) 
       references time_slot;

    alter table if exists thesis_defense_meeting 
       add constraint FK28qy5y9y0auk0cr28lu59mdxu 
       foreign key (thesis_form_id) 
       references thesis_form;

    alter table if exists thesis_form 
       add constraint FK3yh8fnw21wa1oa8bc51w92u6p 
       foreign key (field_id) 
       references field;

    alter table if exists thesis_form 
       add constraint FKnsc9jk815emabltlu7orshjon 
       foreign key (instructor_id) 
       references professor;

    alter table if exists thesis_form 
       add constraint FKkhi6b10pjdntom85jx1rrj5dh 
       foreign key (student_id) 
       references student;

    alter table if exists time_slot 
       add constraint FKb8l4g6svsnj8dlb0kmsinu82y 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists timeslot_professor_association 
       add constraint FKg8cr9fw2a8u49uu8c62rv2dx2 
       foreign key (professor_id) 
       references professor;

    alter table if exists timeslot_professor_association 
       add constraint FKs55v7etyegl5w8q9egqr97ju9 
       foreign key (timeslot_id) 
       references time_slot;

    alter table if exists users 
       add constraint FKfi832e3qv89fq376fuh8920y4 
       foreign key (department_id) 
       references department;

    alter table if exists users 
       add constraint FK2b4ciyset4wra151rt98fte2b 
       foreign key (field_id) 
       references field;

    create table admin (
        id bigint not null,
        primary key (id)
    );

    create table bachelor_student (
        id bigint not null,
        primary key (id)
    );

    create table defensemeeting_professor_association (
        score float(53),
        defense_meeting_id bigint not null,
        id bigint generated by default as identity,
        professor_id bigint not null,
        primary key (id),
        constraint uk_defense_meeting_id_professor_id unique (defense_meeting_id, professor_id)
    );

    create table department (
        id bigint generated by default as identity,
        name varchar(255) not null unique,
        primary key (id)
    );

    create table field (
        active boolean not null,
        department_id bigint,
        id bigint generated by default as identity,
        name varchar(255) not null,
        primary key (id)
    );

    create table master_student (
        id bigint not null,
        primary key (id)
    );

    create table phd_student (
        id bigint not null,
        primary key (id)
    );

    create table professor (
        is_manager boolean,
        id bigint not null,
        primary key (id)
    );

    create table student (
        graduation_date timestamp(6),
        id bigint not null,
        instructor_id bigint,
        student_number bigint not null unique,
        primary key (id)
    );

    create table thesis_defense_meeting (
        score float(53),
        id bigint generated by default as identity,
        selected_time_slot_id bigint unique,
        submission_date timestamp(6),
        thesis_form_id bigint not null unique,
        update_date timestamp(6),
        location varchar(255),
        state varchar(255) not null check (state in ('JURIES_SELECTED','JURIES_SPECIFIED_TIME','STUDENT_SPECIFIED_TIME','SCHEDULED','COMPLETED','CANCELED')),
        primary key (id)
    );

    create table thesis_form (
        admin_reviewed_at timestamp(6),
        field_id bigint,
        id bigint generated by default as identity,
        instructor_id bigint not null,
        instructor_reviewed_at timestamp(6),
        manager_reviewed_at timestamp(6),
        revision_requested_at timestamp(6),
        student_id bigint not null,
        submission_date timestamp(6),
        update_date timestamp(6),
        revision_message varchar(1000),
        abstract_text varchar(255),
        rejection_reason varchar(255),
        state varchar(255) not null check (state in ('SUBMITTED','INSTRUCTOR_APPROVED','INSTRUCTOR_REJECTED','INSTRUCTOR_REVISION_REQUESTED','ADMIN_APPROVED','ADMIN_REJECTED','ADMIN_REVISION_REQUESTED_FOR_STUDENT','ADMIN_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_APPROVED','MANAGER_REJECTED','MANAGER_REVISION_REQUESTED_FOR_STUDENT','MANAGER_REVISION_REQUESTED_FOR_INSTRUCTOR','MANAGER_REVISION_REQUESTED_FOR_ADMIN')),
        student_type varchar(255) check (student_type in ('BACHELOR','MASTER','PHD')),
        title varchar(255),
        primary key (id)
    );

    create table time_slot (
        date date not null,
        defense_meeting_id bigint,
        id bigint generated by default as identity,
        time_period varchar(255) not null check (time_period in ('PERIOD_7_30_9_00','PERIOD_9_00_10_30','PERIOD_10_30_12_00','PERIOD_13_30_15_00','PERIOD_15_30_17_00')),
        primary key (id),
        constraint uk_timeslot_date_period_meeting unique (date, time_period, defense_meeting_id)
    );

    create table timeslot_professor_association (
        id bigint generated by default as identity,
        professor_id bigint not null,
        timeslot_id bigint not null,
        primary key (id)
    );

    create table users (
        enabled boolean,
        creation_date timestamp(6) not null,
        department_id bigint,
        field_id bigint,
        id bigint generated by default as identity,
        email varchar(255) not null unique,
        first_name varchar(255) not null,
        last_name varchar(255) not null,
        password varchar(255) not null,
        phone_number varchar(255) not null unique,
        primary key (id)
    );

    create index idx_timeslot_date_period_meeting 
       on time_slot (defense_meeting_id, date, time_period);

    alter table if exists admin 
       add constraint FKqer4e53tfnl17s22ior7fcsv8 
       foreign key (id) 
       references users;

    alter table if exists bachelor_student 
       add constraint FK1i6ctx3du7dncayp7isl4vdbi 
       foreign key (id) 
       references student;

    alter table if exists defensemeeting_professor_association 
       add constraint FKeelrca6xpvedveu08crl0ilu4 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists defensemeeting_professor_association 
       add constraint FK7xqodopyhrndt0xk41d3pxosl 
       foreign key (professor_id) 
       references professor;

    alter table if exists field 
       add constraint FK7sek1bdc701h6powdjqnnvbvd 
       foreign key (department_id) 
       references department;

    alter table if exists master_student 
       add constraint FK2u7h2o44f3nvxkh77admi3h22 
       foreign key (id) 
       references student;

    alter table if exists phd_student 
       add constraint FK63yiky0ud8vaco0e20ohn7idb 
       foreign key (id) 
       references student;

    alter table if exists professor 
       add constraint FK3d3bqgq0xxp7nbeclk2a6vthc 
       foreign key (id) 
       references users;

    alter table if exists student 
       add constraint FK3nuk9gvmkgj7t8ciwy6s0k2ej 
       foreign key (instructor_id) 
       references professor;

    alter table if exists student 
       add constraint FK3w7xmt19i6a0cr7kp8c80ek40 
       foreign key (id) 
       references users;

    alter table if exists thesis_defense_meeting 
       add constraint FKim4ug0mjvvpsl5wb5va4btmh5 
       foreign key (selected_time_slot_id) 
       references time_slot;

    alter table if exists thesis_defense_meeting 
       add constraint FK28qy5y9y0auk0cr28lu59mdxu 
       foreign key (thesis_form_id) 
       references thesis_form;

    alter table if exists thesis_form 
       add constraint FK3yh8fnw21wa1oa8bc51w92u6p 
       foreign key (field_id) 
       references field;

    alter table if exists thesis_form 
       add constraint FKnsc9jk815emabltlu7orshjon 
       foreign key (instructor_id) 
       references professor;

    alter table if exists thesis_form 
       add constraint FKkhi6b10pjdntom85jx1rrj5dh 
       foreign key (student_id) 
       references student;

    alter table if exists time_slot 
       add constraint FKb8l4g6svsnj8dlb0kmsinu82y 
       foreign key (defense_meeting_id) 
       references thesis_defense_meeting;

    alter table if exists timeslot_professor_association 
       add constraint FKg8cr9fw2a8u49uu8c62rv2dx2 
       foreign key (professor_id) 
       references professor;

    alter table if exists timeslot_professor_association 
       add constraint FKs55v7etyegl5w8q9egqr97ju9 
       foreign key (timeslot_id) 
       references time_slot;

    alter table if exists users 
       add constraint FKfi832e3qv89fq376fuh8920y4 
       foreign key (department_id) 
       references department;

    alter table if exists users 
       add constraint FK2b4ciyset4wra151rt98fte2b 
       foreign key (field_id) 
       references field;
